--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ file(GLOB HEADERS *.h)
 # Add a shared library
 add_library(${name} OBJECT ${SOURCES})
 
-find_package(EDepSim) #short term fix
+find_package(EDepSim REQUIRED) #short term fix
 target_link_libraries(Supera PUBLIC EDepSim::edepsim_io) #short term fix
 
 #include("${ROOT_USE_FILE}")
