--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ target_link_libraries(Supera PUBLIC EDepSim::edepsim_io) #short term fix
 #MINE ?????????
 #target_link_libraries(Supera PUBLIC ROOT::Physics)
 #target_link_libraries( Supera PUBLIC EDepSim::edepsim_io )
-target_link_libraries( Supera EDepSim::edepsim )
+target_link_libraries( Supera PUBLIC EDepSim::edepsim )
 #target_link_libraries( Supera PUBLIC ${Geant4_LIBRARIES})
 #target_include_directories(Supera PUBLIC /app/edep/include)
 #target_include_directories(Supera PUBLIC ${PYTHON_INCLUDE_DIRS})
