--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ file(GLOB HEADERS *.h)
 add_library(${name} OBJECT ${SOURCES})
 
 find_package(EDepSim REQUIRED) #short term fix
-target_link_libraries(Supera PUBLIC EDepSim::edepsim_io) #short term fix
+target_link_libraries(Supera PUBLIC EDepSim::edepsim_io "/app/edep-sim/io") #short term fix
 
 #include("${ROOT_USE_FILE}")
 
