--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,8 @@ file(GLOB HEADERS *.h)
 # Add a shared library
 add_library(${name} OBJECT ${SOURCES})
 
-find_package(EDepSim REQUIRED) #short term fix
-target_link_libraries(Supera PUBLIC EDepSim::edepsim_io "/app/edep-sim/io") #short term fix
+#find_package(EDepSim REQUIRED) #short term fix
+#target_link_libraries(Supera PUBLIC EDepSim::edepsim_io "/app/edep-sim/io") #short term fix
 
 #include("${ROOT_USE_FILE}")
 
@@ -27,7 +27,7 @@ target_link_libraries(Supera PUBLIC EDepSim::edepsim_io "/app/edep-sim/io") #sho
 #MINE ?????????
 #target_link_libraries(Supera PUBLIC ROOT::Physics)
 #target_link_libraries( Supera PUBLIC EDepSim::edepsim_io )
-target_link_libraries( Supera PUBLIC EDepSim::edepsim )
+#target_link_libraries( Supera PUBLIC EDepSim::edepsim )
 #target_link_libraries( Supera PUBLIC ${Geant4_LIBRARIES})
 #target_include_directories(Supera PUBLIC /app/edep/include)
 #target_include_directories(Supera PUBLIC ${PYTHON_INCLUDE_DIRS})
