--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ find_package(ROOT CONFIG REQUIRED)
 # Add a shared library
 add_library(${name} OBJECT ${SOURCES})
 
-find_package(EDepSim REQUIRED) #short term fix
+find_package(EDepSims REQUIRED) #short term fix
 target_link_libraries(Supera PUBLIC EDepSim::edepsim_io EDepSim::edepsim "/app/edep-sim/io") #short term fix
 
 #include("${ROOT_USE_FILE}")
